<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/ButtonDiary"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_weight="0.5"
            android:drawableTop="@drawable/button_diary"
            android:text="@string/main_option_diary" />

        <Button
            android:id="@+id/ButtonBases"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_weight="0.5"
            android:drawableTop="@drawable/button_bases"
            android:text="@string/main_option_bases" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/ButtonPreferences"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_weight="0.5"
            android:drawableTop="@drawable/menu_settings"
            android:text="@string/main_option_preferences" />

        <Button
            android:id="@+id/buttonAuth"
           android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_weight="0.5"
            android:drawableTop="@drawable/button_sync"
            android:text="@string/main_option_sync" />
    </TableRow>

    <Button
        android:id="@+id/buttonTestMealEditor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_option_test" />

</TableLayout>